--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">apm</string>
+    <string name="connect_dropbox">Connect DropBox</string>
+    <string name="start_instruction">Type your master password to begin</string>
+    <string name="login">Login</string>
+
+    <string name="error_password_mismatch">Passwords don\'t match</string>
+    <string name="error_password_wrong">Password is wrong</string>
 </resources>
