--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">apm</string>
+    <string name="app_name">Password Manager</string>
     <string name="connect_dropbox">Connect DropBox</string>
     <string name="start_instruction">Type your master password to begin</string>
     <string name="login">Login</string>
