--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="dialog_delete_message">Are you sure you want to delete this password configuration?</string>
     <string name="copied_to_clipboard">%s copied to clipboard</string>
     <string name="authentication_failed">Authentication Failed</string>
+    <string name="title_edit_password">Edit Password</string>
+    <string name="title_view_password">View Password</string>
+    <string name="title_login">Login</string>
 </resources>
